--- a/Instagram/Base.lproj/Main.storyboard
+++ b/Instagram/Base.lproj/Main.storyboard
@@ -52,7 +52,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OCw-uq-OIK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138" y="1660"/>
+            <point key="canvasLocation" x="1048" y="130"/>
         </scene>
         <!--Setting View Controller-->
         <scene sceneID="JDy-R7-6fo">
@@ -61,10 +61,57 @@
                     <view key="view" contentMode="scaleToFill" id="fcv-81-bfW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fGT-NJ-Xv3">
+                                <rect key="frame" x="57" y="124" width="300" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="gl3-YN-w69"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ESe-1o-6vC">
+                                <rect key="frame" x="57" y="168" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="7O0-pl-K1w"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="表示名を変更" backgroundImage="btn">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="handleChangeButton:" destination="26e-GM-Ola" eventType="touchUpInside" id="1xg-id-zik"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0lu-P1-Lpc">
+                                <rect key="frame" x="57" y="218" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="2qa-6e-r1g"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <state key="normal" title="ログアウト" backgroundImage="btn">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="handleLogoutButton:" destination="26e-GM-Ola" eventType="touchUpInside" id="428-sH-YEF"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="fGT-NJ-Xv3" firstAttribute="top" secondItem="LVb-tA-d7i" secondAttribute="top" constant="80" id="Aew-Ia-gPF"/>
+                            <constraint firstItem="fGT-NJ-Xv3" firstAttribute="centerX" secondItem="fcv-81-bfW" secondAttribute="centerX" id="Iqb-Sn-fjK"/>
+                            <constraint firstItem="0lu-P1-Lpc" firstAttribute="top" secondItem="ESe-1o-6vC" secondAttribute="bottom" constant="10" id="Ujg-0X-Zgs"/>
+                            <constraint firstItem="ESe-1o-6vC" firstAttribute="centerX" secondItem="fcv-81-bfW" secondAttribute="centerX" id="h4P-qq-KcS"/>
+                            <constraint firstItem="ESe-1o-6vC" firstAttribute="top" secondItem="fGT-NJ-Xv3" secondAttribute="bottom" constant="10" id="li9-2f-c2S"/>
+                            <constraint firstItem="0lu-P1-Lpc" firstAttribute="centerX" secondItem="fcv-81-bfW" secondAttribute="centerX" id="tEk-I3-9uC"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="LVb-tA-d7i"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="設定" image="setting" id="ku0-uf-SkY"/>
+                    <connections>
+                        <outlet property="displayNameTextField" destination="fGT-NJ-Xv3" id="aZ2-6g-b8x"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7W4-Kw-2uF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -73,17 +120,80 @@
         <!--Login View Controller-->
         <scene sceneID="zkY-40-EIE">
             <objects>
-                <viewController storyboardIdentifier="Login" id="RNC-CN-VJp" userLabel="Login View Controller" customClass="LoginViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Login" modalPresentationStyle="fullScreen" id="RNC-CN-VJp" userLabel="Login View Controller" customClass="LoginViewController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xxi-pB-xFW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="メールアドレス" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YYI-q2-2pR">
+                                <rect key="frame" x="57" y="124" width="300" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="mHL-d6-qOw"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="パスワード 6文字以上" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fb5-74-YyD">
+                                <rect key="frame" x="57" y="168" width="300" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="L58-0J-7e6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="alphabet" secureTextEntry="YES"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="アカウント作成時は表示名を入力" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YQd-2H-02v">
+                                <rect key="frame" x="57" y="212" width="300" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="ygT-ef-X9y"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VgQ-j0-rJJ">
+                                <rect key="frame" x="57" y="256" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="tzx-wR-04N"/>
+                                </constraints>
+                                <state key="normal" title="ログイン" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handleLoginButton:" destination="RNC-CN-VJp" eventType="touchUpInside" id="uzj-7o-AzD"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Qz-fd-LqF">
+                                <rect key="frame" x="57" y="306" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="kXv-DB-RO4"/>
+                                </constraints>
+                                <state key="normal" title="アカウント作成" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="handleCreateAccountButton:" destination="RNC-CN-VJp" eventType="touchUpInside" id="BBN-Xa-t1Z"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="YQd-2H-02v" firstAttribute="centerX" secondItem="xxi-pB-xFW" secondAttribute="centerX" id="0ui-1W-ivs"/>
+                            <constraint firstItem="VgQ-j0-rJJ" firstAttribute="centerX" secondItem="xxi-pB-xFW" secondAttribute="centerX" id="64z-iw-3Ed"/>
+                            <constraint firstItem="9Qz-fd-LqF" firstAttribute="top" secondItem="VgQ-j0-rJJ" secondAttribute="bottom" constant="10" id="6Y3-FD-B5c"/>
+                            <constraint firstItem="YYI-q2-2pR" firstAttribute="top" secondItem="TqF-Xd-SSh" secondAttribute="top" constant="80" id="AOb-bC-OBI"/>
+                            <constraint firstItem="9Qz-fd-LqF" firstAttribute="centerX" secondItem="xxi-pB-xFW" secondAttribute="centerX" id="ApW-bl-WN5"/>
+                            <constraint firstItem="Fb5-74-YyD" firstAttribute="top" secondItem="YYI-q2-2pR" secondAttribute="bottom" constant="10" id="Er9-YT-dYD"/>
+                            <constraint firstItem="Fb5-74-YyD" firstAttribute="centerX" secondItem="xxi-pB-xFW" secondAttribute="centerX" id="Lt7-7E-sbv"/>
+                            <constraint firstItem="VgQ-j0-rJJ" firstAttribute="top" secondItem="YQd-2H-02v" secondAttribute="bottom" constant="10" id="Lwo-p4-Xdg"/>
+                            <constraint firstItem="YQd-2H-02v" firstAttribute="top" secondItem="Fb5-74-YyD" secondAttribute="bottom" constant="10" id="efc-gu-toZ"/>
+                            <constraint firstItem="YYI-q2-2pR" firstAttribute="centerX" secondItem="xxi-pB-xFW" secondAttribute="centerX" id="rhf-4o-DCv"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="TqF-Xd-SSh"/>
                     </view>
+                    <connections>
+                        <outlet property="displayNameTextField" destination="YQd-2H-02v" id="kje-Nb-yGZ"/>
+                        <outlet property="mailAddressTextField" destination="YYI-q2-2pR" id="hEh-UG-1sL"/>
+                        <outlet property="passwordTextField" destination="Fb5-74-YyD" id="FLQ-gS-oRW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tue-JX-Esy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2013.0434782608697" y="129.91071428571428"/>
+            <point key="canvasLocation" x="-933" y="130"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="kXO-Km-xmh">
@@ -91,6 +201,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="jEu-eb-aJl" customClass="TabBarController" customModule="Instagram" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YFc-WW-6vq">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -106,6 +217,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="btn" width="300" height="40"/>
         <image name="camera" width="25" height="25"/>
         <image name="home" width="25" height="25"/>
         <image name="setting" width="25" height="25"/>
